--- a/index.html
+++ b/index.html
@@ -1,12 +1,23 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
     <link rel="stylesheet" href="style.css">
 </head>
+
 <body>
     <h1>welcome to my work</h1>
+    <div class="main">
+
+        <ul>
+
+            <li><a href="assignment-1/index.html">assignment-1</a></li>
+            <li><a href="assignment-2/index.html">assignment-1</a></li>
+        </ul>
+    </div>
 </body>
+
 </html>
