--- a/assignment-2/index.html
+++ b/assignment-2/index.html
@@ -1,12 +1,58 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
 </head>
+
 <body>
     <h1>assignment-2</h1>
-    
+    <h2><ins>AMBER'S RESTAURANT</ins></h2>
+    <h3>main course</h3>
+    <UL>
+        <li><a href="main course/karahi.html">karahi</a></li>
+        <li><a href="main course/biryani.html">biryani</a></li>
+        <li><a href="main course/bbq.html">bbq</a></li>
+        <li><a href="main course/fish.html">fish</a></li>
+
+        <li><a href="main course/burgers.html">burgers</a></li>
+    </UL>
+    <h3>Appetizers</h3>
+    <ul>
+        <li><a href="appetizers/fruit salad.html">friut salad</a></li>
+
+        <li><a href="appetizers/nuggets.html">nuggets</a></li>
+
+        <li><a href="appetizers/sandwich.html">sandwich</a></li>
+
+        <li><a href="appetizers/french fries.html">french fries</a></li>
+
+        <li><a href="appetizers/cocktails.html">cocktails</a></li>
+    </ul>
+    <h3>beverages</h3>
+    <ul>
+
+        <li><a href="beverages/tea.html">tea</a></li>
+
+        <li><a href="beverages/milk shake.html">milk shake</a></li>
+
+        <li><a href="beverages/soft drink.html">soft drink</a></li>
+
+        <li><a href="beverages/juices.html">juices</a></li>
+
+        <li> <a href="beverages/coffee.html">coffee</a></li>
+
+
+    </ul>
+
+
+
+
+
+
+
 </body>
+
 </html>
